re PR bootstrap/15546 (Bootstrap stage3: Undefined references to basic_string)

2004-05-22  Andrew Pinski  <pinskia@physics.uc.edu>

	PR 15546
	* config/i386/i386.c (output_pic_addr_const <case SYMBOL_REF>):
	Call mark_decl_referenced on the SYMBOL_REF_DECL.

From-SVN: r82141